--- a/jofrehud/cfg/valve.rc
+++ b/jofrehud/cfg/valve.rc
@@ -8,7 +8,6 @@ chud_firstrun
 
 exec "joystick.cfg"
 exec "autoexec.cfg"
-exec "hud_always.cfg"
 
 startupmenu
 sv_unlockedchapters 99
@@ -30,9 +29,11 @@ exec jp_aliases
 exec ih_version
 
 // Resize dashboard dimmer
-echo insomniaHUD: Resizing dashboard dimmer...; wait 20; showconsole; wait 10; toggle mat_aaquality; hideconsole;
+// echo insomniaHUD: Resizing dashboard dimmer...; wait 20; showconsole; wait 10; toggle mat_aaquality; hideconsole;
 
 // Setup
 alias "ih_setup" "exec ih_setup"
 exec ih_setup_complete.txt
 ih_setup
+
+exec "hud_always.cfg"
