--- a/jofrehud/cfg/jp_aliases.cfg
+++ b/jofrehud/cfg/jp_aliases.cfg
@@ -1,3 +1,50 @@
 alias "jp_custom_friend_clear"	"sixense_clear_bindings; sixense_write_bindings jp_friends.txt"
 alias "jp_custom_alias_friendlist_on" "jp_custom_friend_clear; con_logfile cfg/jp_friends.txt; echo #base ../custom/jofrehud/_4plug\4plug_overrides\stuff\friends/on.res; con_logfile ."
 alias "jp_custom_alias_friendlist_off" "jp_custom_friend_clear; con_logfile cfg/jp_friends.txt; echo #base ../custom/jofrehud/_4plug\4plug_overrides\stuff\friends/off.res; con_logfile ."
+
+//alias "jp_custom_id_clear"	"sixense_clear_bindings; sixense_write_bindings jp_targetid.txt; sixense_write_bindings jp_spectatorguihealth.txt; sixense_write_bindings jp_id_hudlayout.txt"
+//alias "jp_custom_alias_targetid_xhud" "jp_custom_id_clear; con_logfile cfg/jp_targetid.txt; echo #base ../custom/jofrehud/_jofrenew/xhud/ui/targetid.res; con_logfile cfg/jp_spectatorguihealth.txt; echo #base ../custom/jofrehud/_jofrenew/xhud/ui/spectatorguihealth.res; con_logfile cfg/jp_id_hudlayout.txt; echo #base ../custom/jofrehud/_jofrenew/xhud/ui/targetid_hudlayout.res; con_logfile ."
+//alias "jp_custom_alias_targetid_magnum" "jp_custom_id_clear; con_logfile cfg/jp_targetid.txt; echo #base ../custom/jofrehud/_jofrenew/magnumhud/ui/id_targetid.res; con_logfile cfg/jp_spectatorguihealth.txt; echo #base ../custom/jofrehud/_jofrenew/magnumhud/ui/id_spectatorguihealth.res;con_logfile cfg/jp_id_hudlayout.txt; echo #base ../custom/jofrehud/_jofrenew/magnumhud/ui/id_hudlayout.res;  con_logfile ."
+
+alias "jp_custom_id_clear"	"sixense_clear_bindings; sixense_write_bindings jp_targetid.txt"
+alias "jp_custom_alias_targetid_xhud" "jp_custom_id_clear; con_logfile cfg/jp_targetid.txt; echo #base ../custom/jofrehud/_jofrenew/xhud/ui/targetid.res;  con_logfile ."
+alias "jp_custom_alias_targetid_magnum" "jp_custom_id_clear; con_logfile cfg/jp_targetid.txt; echo #base ../custom/jofrehud/_jofrenew/magnumhud/ui/id_targetid.res; con_logfile ."
+
+
+alias "jp_custom_spechpid_clear"	"sixense_clear_bindings; sixense_write_bindings jp_spectatorguihealth.txt"
+alias "jp_custom_alias_spechpid_xhud" "jp_custom_spechpid_clear; con_logfile cfg/jp_spectatorguihealth.txt; echo #base ../custom/jofrehud/_jofrenew/xhud/ui/spectatorguihealth.res;  con_logfile ."
+alias "jp_custom_alias_spechpid_magnum" "jp_custom_spechpid_clear; con_logfile cfg/jp_spectatorguihealth.txt; echo #base ../custom/jofrehud/_jofrenew/magnumhud/ui/id_spectatorguihealth.res; con_logfile ."
+
+
+alias "jp_custom_layoutid_clear"	"sixense_clear_bindings; sixense_write_bindings jp_id_hudlayout.txt"
+alias "jp_custom_alias_layoutid_xhud" "jp_custom_layoutid_clear; con_logfile cfg/jp_id_hudlayout.txt; echo #base ../custom/jofrehud/_jofrenew/xhud/ui/targetid_hudlayout.res;  con_logfile ."
+alias "jp_custom_alias_layoutid_magnum" "jp_custom_layoutid_clear; con_logfile cfg/jp_id_hudlayout.txt; echo #base ../custom/jofrehud/_jofrenew/magnumhud/ui/id_hudlayout.res; con_logfile ."
+
+
+alias "jp_todo_ti_magnum"	"jp_custom_alias_targetid_magnum; jp_custom_alias_spechpid_magnum; jp_custom_alias_layoutid_magnum; jp_custom_alias_animid_magnum"
+alias "jp_todo_ti_xhud"	"wait 5; jp_custom_alias_targetid_xhud;wait 10; jp_custom_alias_spechpid_xhud; jp_custom_alias_layoutid_xhud;jp_custom_alias_animid_xhud"
+
+alias "jp_custom_animid_clear"	"sixense_clear_bindings; sixense_write_bindings jp_id_anim_1.txt"
+
+alias "jp_custom_alias_animid_xhud" "jp_xhud_death; jp_xhud_bonus; jp_xhud_neutral"
+alias "jp_custom_alias_animid_magnum" "jp_magnum_death; jp_magnum_bonus; jp_magnum_neutral"
+
+
+
+alias "jp_custom_animid_death_clear"	"sixense_clear_bindings; sixense_write_bindings jp_id_anim_death.txt"
+alias "jp_magnum_death"	"jp_custom_animid_death_clear; con_logfile cfg/jp_id_anim_death.txt ;	jp_magnum_echo_death;  con_logfile ."
+alias "jp_xhud_death"	"jp_custom_animid_death_clear; con_logfile cfg/jp_id_anim_death.txt ; echo event TI_Death{};  con_logfile ."
+
+alias "jp_custom_animid_bonus_clear"	"sixense_clear_bindings; sixense_write_bindings jp_id_anim_bonus.txt"
+alias "jp_magnum_bonus"	"jp_custom_animid_bonus_clear; con_logfile cfg/jp_id_anim_bonus.txt ;	jp_magnum_echo_bonus;  con_logfile ."
+alias "jp_xhud_bonus"	"jp_custom_animid_death_clear; con_logfile cfg/jp_id_anim_bonus.txt ; echo event TI_Bonus{};  con_logfile ."
+
+
+
+alias "jp_custom_animid_neutral_clear"	"sixense_clear_bindings; sixense_write_bindings jp_id_anim_neutral.txt"
+alias "jp_magnum_neutral"	"jp_custom_animid_neutral_clear; con_logfile cfg/jp_id_anim_neutral.txt ;	jp_magnum_echo_neutral;  con_logfile ."
+alias "jp_xhud_neutral"	"jp_custom_animid_death_clear; con_logfile cfg/jp_id_anim_neutral.txt ; echo event TI_Neutral{};  con_logfile ."
+
+alias "jp_magnum_echo_bonus" "echo event TI_Bonus{	Animate PlayerStatusHealthValueID Fgcolor "Positive" linear 0.0 0.1	Animate PlayerStatusHealthValueID2 Fgcolor "Positive" linear 0.0 0.1	Animate PlayerStatusHealthValueID3 Fgcolor "Positive" linear 0.0 0.1}"
+alias "jp_magnum_echo_death" "echo event TI_Death{	Animate PlayerStatusHealthValueID Fgcolor "Negative" linear 0.0 0.1	Animate PlayerStatusHealthValueID2 Fgcolor "Negative" linear 0.0 0.1	Animate PlayerStatusHealthValueID3 Fgcolor "Negative" linear 0.0 0.1}"
+alias "jp_magnum_echo_neutral" "echo event TI_Neutral{	Animate PlayerStatusHealthValueID Fgcolor "Neutral" linear 0.0 0.1	Animate PlayerStatusHealthValueID2 Fgcolor "Neutral" linear 0.0 0.1	Animate PlayerStatusHealthValueID3 Fgcolor "Neutral" linear 0.0 0.1}
