--- a/jofrehud/cfg/jp_aliases.cfg
+++ b/jofrehud/cfg/jp_aliases.cfg
@@ -24,7 +24,7 @@ alias "jp_custom_alias_layoutid_magnum" "jp_custom_layoutid_clear; con_logfile c
 alias "jp_todo_ti_magnum"	"jp_custom_alias_targetid_magnum; jp_custom_alias_spechpid_magnum; jp_custom_alias_layoutid_magnum; jp_custom_alias_animid_magnum"
 alias "jp_todo_ti_xhud"	"wait 5; jp_custom_alias_targetid_xhud;wait 10; jp_custom_alias_spechpid_xhud; jp_custom_alias_layoutid_xhud;jp_custom_alias_animid_xhud"
 
-alias "jp_custom_animid_clear"	"sixense_clear_bindings; sixense_write_bindings jp_id_anim_1.txt"
+
 
 alias "jp_custom_alias_animid_xhud" "jp_xhud_death; jp_xhud_bonus; jp_xhud_neutral"
 alias "jp_custom_alias_animid_magnum" "jp_magnum_death; jp_magnum_bonus; jp_magnum_neutral"
@@ -47,4 +47,4 @@ alias "jp_xhud_neutral"	"jp_custom_animid_death_clear; con_logfile cfg/jp_id_ani
 
 alias "jp_magnum_echo_bonus" "echo event TI_Bonus{	Animate PlayerStatusHealthValueID Fgcolor "Positive" linear 0.0 0.1	Animate PlayerStatusHealthValueID2 Fgcolor "Positive" linear 0.0 0.1	Animate PlayerStatusHealthValueID3 Fgcolor "Positive" linear 0.0 0.1}"
 alias "jp_magnum_echo_death" "echo event TI_Death{	Animate PlayerStatusHealthValueID Fgcolor "Negative" linear 0.0 0.1	Animate PlayerStatusHealthValueID2 Fgcolor "Negative" linear 0.0 0.1	Animate PlayerStatusHealthValueID3 Fgcolor "Negative" linear 0.0 0.1}"
-alias "jp_magnum_echo_neutral" "echo event TI_Neutral{	Animate PlayerStatusHealthValueID Fgcolor "Neutral" linear 0.0 0.1	Animate PlayerStatusHealthValueID2 Fgcolor "Neutral" linear 0.0 0.1	Animate PlayerStatusHealthValueID3 Fgcolor "Neutral" linear 0.0 0.1}
+alias "jp_magnum_echo_neutral" "echo event TI_Neutral{	Animate PlayerStatusHealthValueID Fgcolor "Neutral" linear 0.0 0.1	Animate PlayerStatusHealthValueID2 Fgcolor "Black" linear 0.0 0.1	Animate PlayerStatusHealthValueID3 Fgcolor "Neutral" linear 0.0 0.1}
