--- a/jofrehud/cfg/hud_always.cfg
+++ b/jofrehud/cfg/hud_always.cfg
@@ -19,5 +19,7 @@ cl_mainmenu_safemode 0
 exec _MagnumHUD/main
 net_graphpos 1
 // play "startup.wav"
-
+sv_cheats 1
 exec scripting
+
+//dont move magnumhud/main location, it breaks all echos.
