--- a/jofrehud/cfg/hud_firstrun.cfg
+++ b/jofrehud/cfg/hud_firstrun.cfg
@@ -1,10 +1,19 @@
 // this cfg gets executed once ever, even after restarting tf2
 // it can be re-exec'd by deleting cfg/hud_has_run.txt and restarting tf2
+// con_timestamp breaks it all
+
+jp_custom_id_clear; jp_custom_spechpid_clear; jp_custom_layoutid_clear;jp_custom_animid_death_clear;jp_custom_animid_bonus_clear;jp_custom_animid_neutral_clear
+wait 30; jp_todo_ti_xhud; wait 40; ih_reloadscheme; wait 100
 host_writeconfig config_before_hud
+
+
 // make sure this doesn't get run again
-con_timestamp 0
+
 con_logfile "cfg/hud_has_run.txt"
 echo "alias chud_firstrun none"
 con_logfile "console.txt"
-con_timestamp 1
 
+
+//death
+//con_timestamp 1
+//con_timestamp 0
