--- a/jofrehud/cfg/screen-keyboard-off.cfg
+++ b/jofrehud/cfg/screen-keyboard-off.cfg
@@ -1,3 +1,15 @@
+// Null-Canceling Movement script
+// Prevents you from pressing two opposing directions, which causes you to stop moving
+
+// SCRIPT SETUP — DON'T MESS WITH THESE COMMANDS
+
+alias move_bind=wasd"bind w +mf;bind a +ml;bind s +mb;bind d +mr"
+alias move_bind=esdf"bind e +mf;bind s +ml;bind d +mb;bind f +mr"
+alias move_bind=zqsd"bind z +mf;bind q +ml;bind s +mb;bind d +mr"
+alias move_bind=arrows"bind UPARROW +mf;bind LEFTARROW +ml;bind DOWNARROW +mb;bind RIGHTARROW +mr"
+alias move_bind=asdf"bind a +mf;bind d +ml;bind s +mb;bind f +mr"
+alias move_bind=vim"bind k +mf;bind h +ml;bind j +mb;bind l +mr"
+
 alias +mf"-back;+forward;alias cf +forward"
 alias +mb"-forward;+back;alias cb +back"
 alias +ml"-moveright;+moveleft;alias cl +moveleft"
@@ -10,4 +22,9 @@ alias cf
 alias cb
 alias cl
 alias cr
-echo"Null-Canceling Movement addon applied"
+
+// CHANGE THE VALUE BELOW ACCORDING TO YOUR PREFERENCE
+
+move_bind=wasd
+
+echo"Null-Canceling Movement script applied"
