--- a/jofrehud/cfg/screen-keyboard.cfg
+++ b/jofrehud/cfg/screen-keyboard.cfg
@@ -1,16 +1,32 @@
 cl_crosshair_file ""
 
-alias nmov_reforward null
-alias +mf"-back;+forward;alias cf +forward"
-alias +mb"-forward;+back;alias cb +back"
-alias +ml"-moveright;+moveleft;alias cl +moveleft"
-alias +mr"-moveleft;+moveright;alias cr +moveright"
-alias -mf"-forward;cb;alias cf; cl_crosshair_file ../replay/thumbnails/w"
-alias -mb"-back;cf;alias cb;cl_crosshair_file ../replay/thumbnails/s"
-alias -ml"-moveleft;cr;alias cl;cl_crosshair_file ../replay/thumbnails/a"
-alias -mr"-moveright;cl;alias cr;cl_crosshair_file ../replay/thumbnails/d"
+// Null-Canceling Movement script
+// Prevents you from pressing two opposing directions, which causes you to stop moving
+
+// SCRIPT SETUP — DON'T MESS WITH THESE COMMANDS
+
+alias move_bind=wasd"bind w +mf;bind a +ml;bind s +mb;bind d +mr"
+alias move_bind=esdf"bind e +mf;bind s +ml;bind d +mb;bind f +mr"
+alias move_bind=zqsd"bind z +mf;bind q +ml;bind s +mb;bind d +mr"
+alias move_bind=arrows"bind UPARROW +mf;bind LEFTARROW +ml;bind DOWNARROW +mb;bind RIGHTARROW +mr"
+alias move_bind=asdf"bind a +mf;bind d +ml;bind s +mb;bind f +mr"
+alias move_bind=vim"bind k +mf;bind h +ml;bind j +mb;bind l +mr"
+
+alias +mf"-back;+forward;alias cf +forward; cl_crosshair_file ../replay/thumbnails/w"
+alias +mb"-forward;+back;alias cb +back;cl_crosshair_file ../replay/thumbnails/s"
+alias +ml"-moveright;+moveleft;alias cl +moveleft;cl_crosshair_file ../replay/thumbnails/a"
+alias +mr"-moveleft;+moveright;alias cr +moveright;cl_crosshair_file ../replay/thumbnails/d"
+alias -mf"-forward;cb;alias cf"
+alias -mb"-back;cf;alias cb"
+alias -ml"-moveleft;cr;alias cl"
+alias -mr"-moveright;cl;alias cr"
 alias cf
 alias cb
 alias cl
 alias cr
-echo"Null-Canceling Movement addon applied"
+
+// CHANGE THE VALUE BELOW ACCORDING TO YOUR PREFERENCE
+
+move_bind=wasd
+
+echo"Null-Canceling Movement script applied"
