resolution panel and health and ammo panel

--- a/jofrehud/cfg/jp_aliases.cfg
+++ b/jofrehud/cfg/jp_aliases.cfg
@@ -52,4 +52,9 @@ alias "jp_magnum_echo_neutral" "echo event TI_Neutral{	Animate PlayerStatusHealt
 alias "jp_custom_awsd_clear"	"sixense_clear_bindings; sixense_write_bindings jp_awsd_hudlayout.txt"
 alias "jp_custom_alias_awsd" "jp_custom_awsd_clear; con_logfile cfg/jp_awsd_hudlayout.txt; echo Resource/HudLayout.res{HudCrosshair	{"ypos"			"cs-0.5+40"}};  con_logfile ."
 
-	
+alias "jp_custom_res_clear"	"sixense_clear_bindings; sixense_write_bindings jp_custom_resolution.txt"	
+
+alias "jp_custom_hp_bars_clear"	"sixense_clear_bindings; sixense_write_bindings jp_custom_hp_progressbar.txt"
+alias "jp_custom_ammo_bars_clear"	"sixense_clear_bindings; sixense_write_bindings jp_custom_ammo_progressbar.txt"
+alias "jp_custom_hp_speed_clear"	"sixense_clear_bindings; sixense_write_bindings jp_custom_hp_speed.txt"
+alias "jp_custom_hp_scheme_clear"	"sixense_clear_bindings; sixense_write_bindings jp_custom_hp_scheme.txt"
