--- a/jofrehud/cfg/hud_firstrun.cfg
+++ b/jofrehud/cfg/hud_firstrun.cfg
@@ -6,6 +6,8 @@ jp_custom_id_clear; jp_custom_spechpid_clear; jp_custom_layoutid_clear;jp_custom
 wait 30; jp_todo_ti_xhud; wait 40; ih_reloadscheme; wait 100
 host_writeconfig config_before_hud
 
+// pick resolution
+ih_custom_submenu_ig_res; ih_custom_on; ih_reloadmenus
 
 // make sure this doesn't get run again
 
