Added Dark/Light Mode, Updated Misc Menu

--- a/jofrehud/cfg/hud_firstrun.cfg
+++ b/jofrehud/cfg/hud_firstrun.cfg
@@ -9,6 +9,8 @@ host_writeconfig config_before_hud
 // pick resolution
 ih_custom_submenu_ig_res; ih_custom_on; ih_reloadmenus
 
+jp_custom_alias_snchar_custom
+
 // make sure this doesn't get run again
 
 con_logfile "cfg/hud_has_run.txt"
