--- a/jofrehud/cfg/jp_aliases.cfg
+++ b/jofrehud/cfg/jp_aliases.cfg
@@ -58,3 +58,7 @@ alias "jp_custom_hp_bars_clear"	"sixense_clear_bindings; sixense_write_bindings 
 alias "jp_custom_ammo_bars_clear"	"sixense_clear_bindings; sixense_write_bindings jp_custom_ammo_progressbar.txt"
 alias "jp_custom_hp_speed_clear"	"sixense_clear_bindings; sixense_write_bindings jp_custom_hp_speed.txt"
 alias "jp_custom_hp_scheme_clear"	"sixense_clear_bindings; sixense_write_bindings jp_custom_hp_scheme.txt"
+
+alias "jp_custom_sniperchar_clear"	"sixense_clear_bindings; sixense_write_bindings jp_sniperchar.txt; sixense_clear_bindings; sixense_write_bindings jp_sniperchar_hudlayout.txt"
+alias "jp_custom_alias_snchar_def" "jp_custom_sniperchar_clear"
+alias "jp_custom_alias_snchar_custom" "jp_custom_sniperchar_clear; con_logfile cfg/jp_sniperchar.txt; echo #base ../custom/jofrehud/_jofrenew/ui_overrides/sniper_charge/custom.res; con_logfile cfg/jp_sniperchar_hudlayout.txt; echo Resource/HudLayout.res{HudScopeCharge{tall 0}}; con_logfile ."
