MVM Fixes, NoScope Toggle

--- a/jofrehud/cfg/ih_aliases_custom_submenus.cfg
+++ b/jofrehud/cfg/ih_aliases_custom_submenus.cfg
@@ -17,3 +17,5 @@ alias "ih_custom_submenu_ig_misc" "ih_custom_submenu_clear; con_logfile cfg/ih_c
 alias "ih_custom_submenu_ig_res" "ih_custom_submenu_clear; con_logfile cfg/ih_custom_submenu.txt; echo #base ../custom/jofrehud/customization_menu/submenus/in_game_ui/resolution/submenu.res; con_logfile ."
 
 alias "ih_custom_submenu_ig_srscheme" "ih_custom_submenu_clear; con_logfile cfg/ih_custom_submenu.txt; echo #base ../custom/jofrehud/customization_menu/submenus/in_game_ui/sourcescheme/submenu.res; con_logfile ."
+
+alias "ih_custom_submenu_ig_exploit" "ih_custom_submenu_clear; con_logfile cfg/ih_custom_submenu.txt; echo #base ../custom/jofrehud/customization_menu/submenus/in_game_ui/exploit/submenu.res; con_logfile ."
