--- a/jofrehud/cfg/jp_aliases.cfg
+++ b/jofrehud/cfg/jp_aliases.cfg
@@ -62,3 +62,8 @@ alias "jp_custom_hp_scheme_clear"	"sixense_clear_bindings; sixense_write_binding
 alias "jp_custom_sniperchar_clear"	"sixense_clear_bindings; sixense_write_bindings jp_sniperchar.txt; sixense_clear_bindings; sixense_write_bindings jp_sniperchar_hudlayout.txt"
 alias "jp_custom_alias_snchar_def" "jp_custom_sniperchar_clear"
 alias "jp_custom_alias_snchar_custom" "jp_custom_sniperchar_clear; con_logfile cfg/jp_sniperchar.txt; echo #base ../custom/jofrehud/_jofrenew/ui_overrides/sniper_charge/custom.res; con_logfile cfg/jp_sniperchar_hudlayout.txt; echo Resource/HudLayout.res{HudScopeCharge{tall 0}}; con_logfile ."
+
+alias "jp_custom_ex_scope_clear"	"sixense_clear_bindings; sixense_write_bindings jp_ex_scope.txt"
+
+alias "jp_custom_ex_square_clear"	"sixense_clear_bindings; sixense_write_bindings jp_ex_square.txt"
+alias "jp_custom_ex_square_on" "jp_custom_ex_square_clear; con_logfile cfg/jp_ex_square.txt; echo #base ../custom/jofrehud/_jofrenew/ui_overrides/square/stupidshadows.res; con_logfile ."
