Radial Menu and some fixes

--- a/jofrehud/cfg/ih_aliases_crosshair_shape.cfg
+++ b/jofrehud/cfg/ih_aliases_crosshair_shape.cfg
@@ -1,4 +1,5 @@
 alias "ih_crosshair_shape_clear" "sixense_clear_bindings; sixense_write_bindings ih_crosshair_shape.txt"
+alias "jp_crosshair_config_txt" "sixense_clear_bindings; sixense_write_bindings jp_cross_config.txt; con_logfile cfg/jp_cross_config.txt; echo cl_crosshair_scale 0; con_logfile .;exec jp_cross_config.txt"
 alias "ih_crosshair_shape_0" "ih_crosshair_shape_clear; con_logfile cfg/ih_crosshair_shape.txt; echo Resource/HudLayout.res{IHcrosshair{labeltext !}}; con_logfile ."
 alias "ih_crosshair_shape_1" "ih_crosshair_shape_clear; con_logfile cfg/ih_crosshair_shape.txt; echo Resource/HudLayout.res{IHcrosshair{labeltext #}}; con_logfile ."
 alias "ih_crosshair_shape_2" "ih_crosshair_shape_clear; con_logfile cfg/ih_crosshair_shape.txt; echo Resource/HudLayout.res{IHcrosshair{labeltext $}}; con_logfile ."
