--- a/jofrehud/cfg/jp_aliases.cfg
+++ b/jofrehud/cfg/jp_aliases.cfg
@@ -1,3 +1,6 @@
+//dump
+
+
 alias "jp_custom_friend_clear"	"sixense_clear_bindings; sixense_write_bindings jp_friends.txt"
 alias "jp_custom_alias_friendlist_on" "jp_custom_friend_clear; con_logfile cfg/jp_friends.txt; echo #base ../custom/jofrehud/_4plug\4plug_overrides\stuff\friends/on.res; con_logfile ."
 alias "jp_custom_alias_friendlist_off" "jp_custom_friend_clear; con_logfile cfg/jp_friends.txt; echo #base ../custom/jofrehud/_4plug\4plug_overrides\stuff\friends/off.res; con_logfile ."
@@ -49,8 +52,9 @@ alias "jp_magnum_echo_bonus" "echo event TI_Bonus{	Animate PlayerStatusHealthVal
 alias "jp_magnum_echo_death" "echo event TI_Death{	Animate PlayerStatusHealthValueID Fgcolor "Negative" linear 0.0 0.1	Animate PlayerStatusHealthValueID2 Fgcolor "Negative" linear 0.0 0.1	Animate PlayerStatusHealthValueID3 Fgcolor "Negative" linear 0.0 0.1}"
 alias "jp_magnum_echo_neutral" "echo event TI_Neutral{	Animate PlayerStatusHealthValueID Fgcolor "Neutral" linear 0.0 0.1	Animate PlayerStatusHealthValueID2 Fgcolor "Black" linear 0.0 0.1	Animate PlayerStatusHealthValueID3 Fgcolor "Neutral" linear 0.0 0.1}"
 
-alias "jp_custom_awsd_clear"	"sixense_clear_bindings; sixense_write_bindings jp_awsd_hudlayout.txt"
-alias "jp_custom_alias_awsd" "jp_custom_awsd_clear; con_logfile cfg/jp_awsd_hudlayout.txt; echo Resource/HudLayout.res{HudCrosshair	{"ypos"			"cs-0.5+40"}};  con_logfile ."
+alias "jp_custom_awsd_clear"	"sixense_clear_bindings; sixense_write_bindings jp_awsd_hudlayout.txt; sixense_clear_bindings; sixense_write_bindings jp_awsd_config.txt"
+alias "jp_custom_alias_awsd" "jp_custom_awsd_clear; con_logfile cfg/jp_awsd_hudlayout.txt; echo Resource/HudLayout.res{HudCrosshair	{"ypos"			"cs-0.5+40"}};con_logfile cfg/jp_awsd_config.txt; echo exec screen-keyboard.cfg;  con_logfile ."
+alias "jp_custom_alias_radial" "jp_custom_awsd_clear; con_logfile cfg/jp_awsd_config.txt; echo exec radialmain.cfg;  con_logfile ."
 
 alias "jp_custom_res_clear"	"sixense_clear_bindings; sixense_write_bindings jp_custom_resolution.txt"	
 
@@ -72,3 +76,13 @@ alias "jp_custom_s_border_clear"	"sixense_clear_bindings; sixense_write_bindings
 alias "jp_custom_s_azul" "jp_custom_s_border_clear; con_logfile cfg/jp_steam_border.txt; echo #base ../custom/jofrehud/_jofrenew/ui_overrides/summer-border/azul.res; con_logfile ."
 alias "jp_custom_s_orange" "jp_custom_s_border_clear; con_logfile cfg/jp_steam_border.txt; echo #base ../custom/jofrehud/_jofrenew/ui_overrides/summer-border/orange.res; con_logfile ."
 alias "jp_custom_s_neon" "jp_custom_s_border_clear; con_logfile cfg/jp_steam_border.txt; echo #base ../custom/jofrehud/_jofrenew/ui_overrides/summer-border/neon.res; con_logfile ."
+
+// death joycon cvar
+
+alias joy_advaxisu "mat_color_projection 2"
+alias joy_advanced "mat_color_projection 2"
+alias joy_advaxisv "mat_color_projection 2"
+alias joy_advaxisx "mat_color_projection 2"
+alias joy_advaxisy "mat_color_projection 2"
+alias joy_advaxisz "mat_color_projection 2"
+alias joy_advaxisu "mat_color_projection 2"
